[package]
name = "uprobeho-ebpf"
version = "0.1.0"
edition = "2021"

[dependencies]
uprobeho-common = { path = "../uprobeho-common" }

aya-ebpf = { workspace = true }
aya-log-ebpf = { workspace = true }

[build-dependencies]
which = { workspace = true }

[[bin]]
name = "uprobeho"
path = "src/main.rs"
